@@ -289,10 +289,12 @@ contains
 
       integer, parameter :: iachar_spc = 32, iachar_tab = 9
 
-      logical :: checkForDifference
+      logical :: checkCharacterByCharacter
       logical :: throwException
       logical :: whitespaceYes
       character(len=:), allocatable :: expected_, found_
+
+      throwException = .false.
 
       message_ = NULL_MESSAGE
       if (present(message)) message_ = message
@@ -300,6 +302,8 @@ contains
       if(present(whitespace))then
          whitespace_ = whitespace
       else
+         ! This is the default whitespace option.  TRIM_ALL is the legacy behavior.
+         ! TODO:  Change default behavior to IGNORE_DIFFERENCES.
          whitespace_ = TRIM_ALL
       end if
 
@@ -325,25 +329,26 @@ contains
       ! Worry:  Original code written to !print out trimmed strings.  Not sure what effect
       ! Keep will have.
       !print *,1000
-      checkForDifference = .true.
+      checkCharacterByCharacter = .true.
       select case (whitespace_%value)
-         case (TRIM_ALL%value)
-            checkForDifference = expected_ /= found_
+      case (TRIM_ALL%value)
+         ! Check to see if we have to do more work.
+            checkCharacterByCharacter = expected_ /= found_
             numI = len(expected_); numJ = len(found_)
 
          case (IGNORE_ALL%value)
-            checkForDifference = expected_ /= found_
+            checkCharacterByCharacter = expected_ /= found_
             numI = len(expected_); numJ = len(found_)
 
          case (IGNORE_DIFFERENCES%value)
-            checkForDifference = expected_ /= found_
+            checkCharacterByCharacter = expected_ /= found_
             numI = len(expected_); numJ = len(found_)
             !print *,1001,whitespace_%value
             !print *,1002,'e="',expected_,'"'
             !print *,1003,'f="',found_,'"'
 
          case (KEEP_ALL%value)
-            checkForDifference = expected_ /= found_
+            checkCharacterByCharacter = expected_ /= found_
             numI = len(expected_); numJ = len(found_)
 
          case default
@@ -351,14 +356,25 @@ contains
                  & 'assertEqualString_InternalError: ' &
                  & // 'Unknown case for handling Whitespace'
             call throw(appendWithSpace(message_,throwMessage), location)
-      end select
+         end select
 
+         ! Flag a check if zero-length arrays are involved.
+         if ((numI .eq. 0) .or. (numJ .eq. 0)) then
+            checkCharacterByCharacter = .true.
+         end if
+         
+         !if (numI .eq. 0) then
+         !   print *,'e: "'//expected_//'"'
+         !   print *,'f: "'//found_//'"'
+         !   print *,'?: ',checkCharacterByCharacter
+         !   print *,'!: ',expected_ /= found_
+         !   print *,'z: ',expected_ == found_
+         !end if
 
       !print *,2000,whitespace_%value
 
-      throwException = .false.
 !      if (trim(expected) /= trim(found)) then
-      if (checkForDifference) then
+      if (checkCharacterByCharacter) then
          numSameCharacters = 0
 
          ! Cycle over both strings, compare each element, skipping if needed.
@@ -501,6 +517,8 @@ contains
             call throw(appendWithSpace(message_, throwMessage), location)
 
          end if
+
+      ! else ! if checkCharacterByCharacter == .false. and we don't have to compare character-by-character
 
       end if
 
